--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/images/jims.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GeekRoom JIMS</title>
   </head>
   <body>
+    <style></style>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
